force-app/main/default/objects/Integration_Callout_Body__c/Integration_Callout_Body__c.object-meta.xml
<CustomObject>
    <label>Integration Callout Body</label>
    <nameField>
        <displayFormat>IC-{00000}</displayFormat>
        <label>Integration Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Callout Bodies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>