force-app/main/default/objects/Integration_Callout_Body__c/fields/Marketing_Finance_Integration_Log__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Finance_Integration_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Finance Integration Log</label>
    <referenceTo>MF_Integration_Log__c</referenceTo>
    <relationshipLabel>Integration Callout Bodies</relationshipLabel>
    <relationshipName>Integration_Callout_Bodies</relationshipName>
    <type>Lookup</type>
</CustomField>