force-app/main/default/objects/Integration_Callout_Body__c/fields/Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Request_Body__c</fullName>
    <description>Stores the value for a particular integration (inbound or outbound) request</description>
    <inlineHelpText>The maximum number of characters for the field is 10000. If the full value doesn&apos;t appear it&apos;s because has been reduced to fit the maximum number</inlineHelpText>
    <label>Request Body</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>