force-app/main/default/objects/Integration_Callout_Body__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>inbound</fullName>
                <label>Inbound Request</label>
            </value>
            <value>
                <fullName>outbound</fullName>
                <label>Outbound Request</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>