force-app/main/default/objects/Integration_Callout_Body__c/fields/Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Response_Code__c</fullName>
    <description>Represents the response status code received for a particular request</description>
    <label>Response Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>