force-app/main/default/objects/Integration_Callout_Body__c/fields/Response_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Response_Error_Message__c</fullName>
    <description>Error Message received in the response of the callout in case there has been a failure</description>
    <label>Response Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>